# open-deepthink

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  blueprint.md  plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tracker.md
agents/: __init__.py  base.py  critic.py  meta_refiner.py  planner.py  refiner.py  thinker.py  tools.py
app/: config.py  dependencies.py  main.py
clients/: __init__.py  gemini.py
frontend/: README.md  streamlit_app.py
models/: __init__.py  request.py  response.py
orchestrator/: pipeline.py
prompts/: critic.txt  meta_refiner.txt  planner.txt  refiner.txt  thinker.txt
scripts/: cli_test.py  start_frontend.py  start_server.py  test_endpoints.py  test_gemini_direct.py  test_pipeline_simple.py  test_pipeline_working.py  test_token_fix.py
tests/: test_basic.py
utils/: __init__.py  logging.py
